# clankers

./: .gitignore  AGENTS.md  CHANGES.md  Cargo.toml  README.md  TODO.md  build-plan-router.json  build-plan.json  crate-hashes.json  dylint.toml  flake.nix  rust-toolchain.toml  rustc-ice-2026-03-07T21_23_03-2747941.txt
crates/clanker-auth/: Cargo.toml  LICENSE  README.md
crates/clanker-auth/src/: builder.rs  constants.rs  credential.rs  lib.rs  tests.rs  token.rs  utils.rs  verifier.rs
crates/clanker-auth/verus/: auth_spec.rs  lib.rs
crates/clanker-message/: Cargo.toml  README.md
crates/clanker-message/src/: content.rs  contracts.rs  cost.rs  lib.rs  message.rs  metrics.rs  plugin.rs  process.rs  result_streaming.rs  semantic_event.rs  streaming.rs  token.rs  transcript.rs
crates/clanker-plugin-sdk/: Cargo.toml  README.md
crates/clanker-plugin-sdk/src/: args.rs  dispatch.rs  http.rs  lib.rs  types.rs
crates/clanker-tui-types/: .gitignore  Cargo.toml  README.md
crates/clanker-tui-types/src/: actions.rs  block.rs  cost.rs  display.rs  lib.rs  menu.rs  peers.rs  plugin.rs  process.rs  progress.rs  selector.rs  subagent.rs  syntax.rs
crates/clankers-adapters/: Cargo.toml
crates/clankers-adapters/src/: lib.rs
crates/clankers-agent/: Cargo.toml
crates/clankers-agent-defs/: Cargo.toml
crates/clankers-agent-defs/src/: definition.rs  discovery.rs  identity.rs  lib.rs  security.rs
crates/clankers-agent/src/: builder.rs  compaction.rs  context.rs  error.rs  events.rs  hooks.rs  lib.rs  model.rs  routing.rs  system_prompt.rs  tool.rs  ttsr.rs
crates/clankers-artifacts/: Cargo.toml
crates/clankers-artifacts/src/: lib.rs
crates/clankers-auth/: Cargo.toml
crates/clankers-auth/src/: builder.rs  capability.rs  constants.rs  error.rs  lib.rs  revocation.rs  tests.rs  token.rs  verifier.rs
crates/clankers-autoresearch/: Cargo.toml
crates/clankers-autoresearch/src/: confidence.rs  git.rs  jsonl.rs  lib.rs  metrics.rs  session.rs
crates/clankers-config/: Cargo.toml
crates/clankers-config/src/: core.rs  lib.rs  model_roles.rs  nickel.rs  paths.rs  settings-contract.ncl  settings.rs  theme-contract.ncl  theme.rs
crates/clankers-controller/: Cargo.toml
crates/clankers-controller/src/: audit.rs  auto_test.rs  capability.rs  client.rs  command.rs  command_images.rs  command_responsibility.rs  command_thinking.rs  config.rs  confirm.rs  convert.rs  core_effects.rs  core_engine_composition.rs  domain_event.rs  effect_interpretation.rs  event_processing.rs  hooks.rs  lib.rs  loop_mode.rs  metrics_capture.rs  persistence.rs  persistence_service.rs  runtime_adapter.rs  session_ledger.rs  transport.rs  transport_convert.rs
crates/clankers-controller/tests/: fcis_shell_boundaries.rs
crates/clankers-db/: Cargo.toml
crates/clankers-db/src/: audit.rs  error.rs  file_cache.rs  history.rs  insights.rs  lib.rs  memory.rs  metrics.rs  process_jobs.rs  registry.rs  schema.rs  search_index.rs  session_index.rs  skill_usage.rs  tool_results.rs  usage.rs
crates/clankers-engine/: Cargo.toml
crates/clankers-engine-host/: Cargo.toml
crates/clankers-engine-host/src/: lib.rs  runtime.rs  session_ledger.rs  stream.rs
crates/clankers-engine/src/: lib.rs
crates/clankers-engine/tests/: deterministic_turn_replay.rs
crates/clankers-hooks/: Cargo.toml
crates/clankers-hooks/src/: config.rs  dispatcher.rs  git.rs  lib.rs  payload.rs  point.rs  script.rs  verdict.rs
crates/clankers-loop/: Cargo.toml
crates/clankers-loop/src/: condition.rs  engine.rs  iteration.rs  lib.rs  truncation.rs
crates/clankers-loop/verus/: lib.rs  loop_state_spec.rs
crates/clankers-matrix/: Cargo.toml
crates/clankers-matrix/src/: bridge.rs  client.rs  config.rs  lib.rs  markdown.rs  protocol.rs  room.rs
crates/clankers-merge/: Cargo.toml
crates/clankers-merge/src/: diff.rs  flatten.rs  graggle.rs  lib.rs  merge.rs  patch.rs
crates/clankers-message/: Cargo.toml
crates/clankers-message/src/: lib.rs  message.rs  result_streaming.rs  streaming.rs  tool_result.rs
crates/clankers-model-selection/: Cargo.toml
crates/clankers-model-selection/src/: config.rs  cost_tracker.rs  lib.rs  orchestration.rs  policy.rs  signals.rs
crates/clankers-nix/: Cargo.toml
crates/clankers-nix/src/: derivation.rs  error.rs  eval.rs  flakeref.rs  lib.rs  refscan.rs  store_path.rs
crates/clankers-plugin/: Cargo.toml
crates/clankers-plugin-sdk/: Cargo.toml  README.md
crates/clankers-plugin-sdk/src/: args.rs  dispatch.rs  http.rs  lib.rs  types.rs
crates/clankers-plugin/src/: bridge.rs  bridge_tests.rs  hooks.rs  host.rs  host_facade.rs  host_tests.rs  lib.rs  manifest.rs  registry.rs  restricted_sandbox.rs  runtime.rs  sandbox.rs  sandbox_tests.rs  stdio_protocol.rs  stdio_runtime.rs  ui.rs
crates/clankers-procmon/: Cargo.toml
crates/clankers-procmon/src/: lib.rs
crates/clankers-protocol/: Cargo.toml
crates/clankers-protocol/src/: command.rs  control.rs  event.rs  frame.rs  lib.rs  types.rs
crates/clankers-protocol/tests/: integration.rs
crates/clankers-provider/: Cargo.toml
crates/clankers-provider/src/: auth.rs  credential_manager.rs  discovery.rs  error.rs  error_classifier.rs  fake.rs  lib.rs  message.rs  openai_codex.rs  provider_router_responsibility.rs  router.rs  router_request_bridge.rs  rpc_provider.rs  streaming.rs
crates/clankers-router/: Cargo.toml
crates/clankers-router/src/: auth.rs  catalog.rs  credential.rs  credential_pool.rs  lib.rs  model.rs  model_switch.rs  multi.rs  oauth.rs  provider.rs  quorum.rs  registry.rs  retry.rs  router.rs  streaming.rs
crates/clankers-router/tests/: integration.rs
crates/clankers-runtime/: Cargo.toml
crates/clankers-runtime/src/: adapters.rs  boundary.rs  confirmation.rs  dynamic_runtime.rs  effects.rs  event_summary.rs  events.rs  ledger.rs  lib.rs  process_jobs.rs  prompt.rs  runtime.rs  services.rs  session.rs  steel_mutation.rs  steel_orchestration.rs  steel_orchestration_mutation.rs  steel_repo_evolution.rs  steel_runtime.rs  steel_tool_substrate.rs  tools.rs
crates/clankers-runtime/tests/: api_compat.rs
src/: cli.rs  (+17 more)
(+3170 files in other folders)
