[workspace]
members = [
    ".",
    "crates/clankers-auth",
    "crates/clankers-merge",
    "crates/clankers-matrix",
    "crates/clankers-router",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"

[package]
name = "clankers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "A terminal-based coding agent with LLM tool use, file I/O, code search, and WASM plugins"
readme = "README.md"
keywords = ["ai", "agent", "llm", "terminal", "coding"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "clankers"
path = "src/main.rs"

[dependencies]
clankers-auth = { version = "0.1.0", path = "crates/clankers-auth" }
clankers-merge = { version = "0.1.0", path = "crates/clankers-merge" }
clankers-matrix = { version = "0.1.0", path = "crates/clankers-matrix" }
clankers-router = { version = "0.1.0", path = "crates/clankers-router", features = ["rpc"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2.0"
snafu = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
hex = "0.4"
url = { version = "2", features = ["serde"] }
parking_lot = "0.12"
dirs = "6"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
strum = { version = "0.27", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"] }
reqwest-eventsource = "0.6"
redb = "2.6"
base64 = "0.22"
mime = "0.3"
sha2 = "0.10"
tokio-stream = "0.1"
fs4 = { version = "0.13", features = ["tokio"] }
regex = "1"
pulldown-cmark = "0.12"
serde_yaml = "0.9"
petgraph = "0.7"
ratatui = "0.30"
unicode-width = "0.2"
crossterm = "0.29"
iroh = { version = "0.96", features = ["address-lookup-mdns"] }
iroh-blobs = "0.98"
extism = "1.13"
ignore = "0.4"
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
open = "5"

# PTY support for TUI validation tool
portable-pty = { version = "0.9", optional = true }
vt100 = { version = "0.16", optional = true }

# Optional simulation testing
madsim = { version = "0.2", features = ["macros"], optional = true }

# Optional property-based testing
bolero = { version = "0.13", optional = true }
bolero-generator = { version = "0.13", optional = true }
proptest = { version = "1.0", optional = true }
syntect = "5.3.0"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
grep-matcher = "0.1.8"
similar = "2.7"
sysinfo = "0.34"
git2 = "0.20"
glob = "0.3"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"
portable-pty = "0.9"
vt100 = "0.16"

[lints]
workspace = true

[features]
default = ["tui-validate"]
tui-validate = ["dep:portable-pty", "dep:vt100"]
simulation = ["dep:madsim"]
property-testing = ["dep:bolero", "dep:bolero-generator", "dep:proptest"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow noisy cosmetic lints — tighten these over time.
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
missing_fields_in_debug = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
return_self_not_must_use = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
match_same_arms = { level = "allow", priority = 1 }
redundant_closure_for_method_calls = { level = "allow", priority = 1 }
if_not_else = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
many_single_char_names = { level = "allow", priority = 1 }
doc_link_with_quotes = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
map_unwrap_or = { level = "allow", priority = 1 }
duration_suboptimal_units = { level = "allow", priority = 1 }
assigning_clones = { level = "allow", priority = 1 }
elidable_lifetime_names = { level = "allow", priority = 1 }
unnecessary_literal_bound = { level = "allow", priority = 1 }
# Signatures and struct layout — fix later, one at a time.
needless_pass_by_value = { level = "allow", priority = 1 }
ref_option = { level = "allow", priority = 1 }
trivially_copy_pass_by_ref = { level = "allow", priority = 1 }
implicit_hasher = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
used_underscore_binding = { level = "allow", priority = 1 }
unused_self = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
# These have many hits across the codebase — fix in follow-up PRs.
match_wildcard_for_single_variants = { level = "allow", priority = 1 }
case_sensitive_file_extension_comparisons = { level = "allow", priority = 1 }
manual_strip = { level = "allow", priority = 1 }
needless_continue = { level = "allow", priority = 1 }
unused_async = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
bool_to_int_with_if = { level = "allow", priority = 1 }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
