[workspace]
members = [
    ".",
    "crates/clankers-agent",
    "crates/clankers-agent-defs",
    "crates/clankers-ucan",
    "crates/clankers-config",
    "crates/clankers-core",
    "crates/clankers-controller",
    "crates/clankers-db",
    "crates/clankers-hooks",
    "crates/clankers-matrix",
    "crates/clankers-message",
    "crates/clankers-model-selection",
    "crates/clankers-nix",
    "crates/clankers-plugin",
    "crates/clankers-procmon",
    "crates/clankers-prompts",
    "crates/clankers-protocol",
    "crates/clankers-provider",
    "crates/clankers-session",
    "crates/clankers-skills",

    "crates/clankers-tui",
    "crates/clankers-tui-types",
    "crates/clankers-util",
    "crates/clankers-zellij",
    "crates/clankers-tts",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Shared across most workspace crates — centralised here to prevent version drift.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
clanker-actor = { git = "https://github.com/brittonr/clanker-actor" }
clanker-loop = { git = "https://github.com/brittonr/clanker-loop" }
# Vendored snapshot from https://github.com/brittonr/clanker-router @ eed716b2df17c051235172bcdea58ed14b69755d
clanker-router = { path = "vendor/clanker-router" }
clanker-scheduler = { git = "https://github.com/brittonr/clanker-scheduler" }
graggle = { git = "https://github.com/brittonr/graggle" }
rat-branches = { path = "../subwayrat/crates/rat-branches" }
rat-keymap = { path = "../subwayrat/crates/rat-keymap" }
rat-leaderkey = { path = "../subwayrat/crates/rat-leaderkey" }
rat-inline = { path = "../subwayrat/crates/rat-inline" }
rat-markdown = { path = "../subwayrat/crates/rat-markdown" }
rat-widgets = { path = "../subwayrat/crates/rat-widgets" }

[package]
name = "clankers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "A terminal-based coding agent with LLM tool use, file I/O, code search, and WASM plugins"
readme = "README.md"
keywords = ["ai", "agent", "llm", "terminal", "coding"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "clankers"
path = "src/main.rs"

[dependencies]
clankers-agent = { version = "0.1.0", path = "crates/clankers-agent" }
clankers-nix = { version = "0.1.0", path = "crates/clankers-nix", features = ["eval"] }
clankers-agent-defs = { version = "0.1.0", path = "crates/clankers-agent-defs" }
clankers-ucan = { version = "0.1.0", path = "crates/clankers-ucan" }
clankers-config = { version = "0.1.0", path = "crates/clankers-config" }
clankers-core = { version = "0.1.0", path = "crates/clankers-core" }
clankers-db = { version = "0.1.0", path = "crates/clankers-db" }
clankers-hooks = { version = "0.1.0", path = "crates/clankers-hooks" }
clanker-loop = { workspace = true }
graggle = { workspace = true }
clankers-message = { version = "0.1.0", path = "crates/clankers-message" }
clankers-model-selection = { version = "0.1.0", path = "crates/clankers-model-selection" }
clankers-session = { version = "0.1.0", path = "crates/clankers-session" }
clankers-plugin = { version = "0.1.0", path = "crates/clankers-plugin" }
clankers-procmon = { version = "0.1.0", path = "crates/clankers-procmon" }
clankers-prompts = { version = "0.1.0", path = "crates/clankers-prompts" }
clankers-provider = { version = "0.1.0", path = "crates/clankers-provider" }
clankers-matrix = { version = "0.1.0", path = "crates/clankers-matrix" }
clanker-router = { workspace = true, features = ["rpc"] }
clanker-scheduler = { workspace = true }
clankers-skills = { version = "0.1.0", path = "crates/clankers-skills" }
clankers-protocol = { version = "0.1.0", path = "crates/clankers-protocol" }
clanker-actor = { workspace = true }
clankers-controller = { version = "0.1.0", path = "crates/clankers-controller" }
openspec = { path = "../openspec", optional = true }
clankers-tts = { version = "0.1.0", path = "crates/clankers-tts" }
clankers-tui = { version = "0.1.0", path = "crates/clankers-tui" }
clankers-zellij = { version = "0.1.0", path = "crates/clankers-zellij", optional = true }
clankers-tui-types = { version = "0.1.0", path = "crates/clankers-tui-types" }
clankers-util = { version = "0.1.0", path = "crates/clankers-util" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = { workspace = true }
snafu = "0.8"
bytes = "1"
chrono = { workspace = true }
rand = { workspace = true }
hex = "0.4"
url = { version = "2", features = ["serde"] }
parking_lot = "0.12"
dirs = "6"
libc = "0.2"
uuid = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
redb = "2.6"
base64 = "0.22"
mime = "0.3"
sha2 = "0.10"
tokio-stream = "0.1"
regex = "1"
serde_yaml = "0.9"
rat-inline = { workspace = true }
ratatui = "0.30"
ratatui-hypertile = { version = "0.1", features = ["serde"] }
unicode-width = "0.2"
crossterm = "0.29"
iroh = { version = "0.96", features = ["address-lookup-mdns"] }
iroh-blobs = "0.98"
extism = "1.13"
ignore = "0.4"
open = "5"

# PTY support for TUI validation tool
portable-pty = { version = "0.9", optional = true }
vt100 = { version = "0.16", optional = true }

# Optional simulation testing
madsim = { version = "0.2", features = ["macros"], optional = true }

# Optional property-based testing
bolero = { version = "0.13", optional = true }
bolero-generator = { version = "0.13", optional = true }
proptest = { version = "1.0", optional = true }
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
similar = "2.7"
git2 = "0.20"
glob = "0.3"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"
portable-pty = "0.9"
parking_lot = "0.12"
vt100 = "0.16"
insta = { version = "1.46", features = ["glob"] }
image = "0.25.10"

[lints]
workspace = true

[features]
default = ["tui-validate", "openspec", "zellij-share"]
tui-validate = ["dep:portable-pty", "dep:vt100"]
openspec = ["dep:openspec"]
zellij-share = ["dep:clankers-zellij"]
simulation = ["dep:madsim"]
property-testing = ["dep:bolero", "dep:bolero-generator", "dep:proptest"]
nickel = ["clankers-config/nickel"]

[workspace.lints.rust]
# dylint sets `dylint_lib` cfg when running lint libraries
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("tigerstyle"))'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow noisy cosmetic lints — tighten these over time.
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
missing_fields_in_debug = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
return_self_not_must_use = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
match_same_arms = { level = "allow", priority = 1 }
redundant_closure_for_method_calls = { level = "allow", priority = 1 }
if_not_else = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
# default_trait_access — enabled (zero current violations)
# format_push_string — enabled (zero current violations)
many_single_char_names = { level = "allow", priority = 1 }
doc_link_with_quotes = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
map_unwrap_or = { level = "allow", priority = 1 }
duration_suboptimal_units = { level = "allow", priority = 1 }
# assigning_clones — enabled (zero current violations)
elidable_lifetime_names = { level = "allow", priority = 1 }
unnecessary_literal_bound = { level = "allow", priority = 1 }
borrow_deref_ref = { level = "allow", priority = 1 }
collapsible_match = { level = "allow", priority = 1 }
unnecessary_trailing_comma = { level = "allow", priority = 1 }
# Signatures and struct layout — fix later, one at a time.
needless_pass_by_value = { level = "allow", priority = 1 }
ref_option = { level = "allow", priority = 1 }
trivially_copy_pass_by_ref = { level = "allow", priority = 1 }
implicit_hasher = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
used_underscore_binding = { level = "allow", priority = 1 }
unused_self = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
# These have many hits across the codebase — fix in follow-up PRs.
match_wildcard_for_single_variants = { level = "allow", priority = 1 }
case_sensitive_file_extension_comparisons = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }

[workspace.metadata.tigerstyle]
default_scope = ["--workspace"]
cargo_check_args = []

[workspace.metadata.dylint]
libraries = [
    { git = "ssh://git@github.com/brittonr/tigerstyle-rs.git", rev = "bbf5fbb60679668ca8c42593fd617db2d0f89b43" },
]


[profile.release]
lto = "thin"
codegen-units = 16
strip = true

[profile.dev]
opt-level = 1
