[package]
name = "clanker-message"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Conversation message, content, tool-result, and streaming types for terminal coding agents"
repository = "https://github.com/brittonr/clankers"
readme = "README.md"
keywords = ["agent", "message", "streaming", "tooling", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clanker-router = { workspace = true }
hex = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("tigerstyle"))'] }
