[package]
name = "clanker-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building clanker WASM plugins — provides protocol types, tool/event dispatch, and arg helpers"
repository = "https://github.com/brittonr/clankers"
license = "AGPL-3.0-or-later"
keywords = ["wasm", "plugin", "extism", "sdk"]
categories = ["wasm", "development-tools"]

[lib]
crate-type = ["rlib"]

[dependencies]
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["http"]
http = ["extism-pdk/http"]
