[package]
name = "clanker-tui-types"
version = "0.1.0"
edition = "2024"
description = "Shared UI event, action, display, progress, and plugin types for terminal agents"
repository = "https://github.com/brittonr/clankers"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["tui", "types", "terminal", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
blake3 = "1"
clanker-message = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rat-markdown = { workspace = true }
rat-branches = { workspace = true }
rat-leaderkey = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("tigerstyle"))'] }
