[package]
name = "clankers-adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shell-free reusable adapter bricks for embedding Clankers engine turns in products"

[dependencies]
clanker-message = { workspace = true }
clankers-engine = { version = "0.1.0", path = "../clankers-engine" }
clankers-engine-host = { version = "0.1.0", path = "../clankers-engine-host" }
clankers-tool-host = { version = "0.1.0", path = "../clankers-tool-host" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
