[package]
name = "clankers-agent-defs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent definition parsing, discovery, and identity management"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
redb = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
