[package]
name = "clankers-agent-defs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent definition parsing, discovery, and identity management"

[dependencies]
chrono = { workspace = true }
redb = "2.6"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
