[package]
name = "clankers-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent core — turn loop, event bus, tool interface, context management"

[dependencies]
clankers-config = { version = "0.1.0", path = "../clankers-config" }
clankers-db = { version = "0.1.0", path = "../clankers-db" }
clankers-engine = { version = "0.1.0", path = "../clankers-engine" }
clankers-hooks = { version = "0.1.0", path = "../clankers-hooks" }
clanker-loop = { workspace = true }
clanker-message = { workspace = true }
clankers-model-selection = { version = "0.1.0", path = "../clankers-model-selection" }
clankers-procmon = { version = "0.1.0", path = "../clankers-procmon" }
clankers-prompts = { version = "0.1.0", path = "../clankers-prompts" }
clankers-provider = { version = "0.1.0", path = "../clankers-provider" }
clanker-router = { workspace = true }
clankers-skills = { version = "0.1.0", path = "../clankers-skills" }
openspec = { path = "../../../openspec", optional = true }
clanker-tui-types = { workspace = true }
clankers-util = { version = "0.1.0", path = "../clankers-util" }

async-trait = "0.1"
chrono = { workspace = true }
dirs = "6"
futures = "0.3"
parking_lot = "0.12"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { workspace = true }

[features]
default = ["openspec"]
openspec = ["dep:openspec"]

[lints]
workspace = true

[dev-dependencies]
clankers-core = { version = "0.1.0", path = "../clankers-core" }
tempfile = "3"
