[package]
name = "clankers-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent core — turn loop, event bus, tool interface, context management"

[dependencies]
clankers-engine = { version = "0.1.0", path = "../clankers-engine" }
clankers-engine-host = { version = "0.1.0", path = "../clankers-engine-host" }
clankers-tool-host = { version = "0.1.0", path = "../clankers-tool-host" }
clanker-loop = { workspace = true }
clanker-message = { workspace = true, features = ["transcript-compat"] }
clankers-runtime = { version = "0.1.0", path = "../clankers-runtime" }
clankers-artifacts = { version = "0.1.0", path = "../clankers-artifacts" }

async-trait = "0.1"
chrono = { workspace = true }
futures = "0.3"
parking_lot = "0.12"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { workspace = true }

[features]
default = []

[lints]
workspace = true

[dev-dependencies]
clankers-adapters = { version = "0.1.0", path = "../clankers-adapters" }
clankers-db = { version = "0.1.0", path = "../clankers-db" }
clankers-hooks = { version = "0.1.0", path = "../clankers-hooks" }
clankers-provider = { version = "0.1.0", path = "../clankers-provider" }
clankers-core = { version = "0.1.0", path = "../clankers-core" }
tempfile = "3"
