[package]
name = "clankers-artifacts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Content-addressed artifact identity types for Clankers runtime provenance"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
