[package]
name = "clankers-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "UCAN-inspired capability-based authorization for clankers agents"

[dependencies]
iroh = { version = "0.96", features = ["address-lookup-mdns"] }
serde = { workspace = true }
postcard = { version = "1.0", features = ["alloc"] }
blake3 = "1.5"
base64 = "0.22"
hex = "0.4"
thiserror = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
redb = "2.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[lints]
workspace = true
