[package]
name = "clankers-autoresearch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Autonomous experiment loop: init/run/log tools, JSONL persistence, metric extraction, confidence scoring, git automation"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("tigerstyle"))'] }

