[package]
name = "clankers-controller"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Transport-agnostic session controller for agent orchestration"

[dependencies]
clankers-protocol = { version = "0.1.0", path = "../clankers-protocol" }
clankers-agent = { version = "0.1.0", path = "../clankers-agent" }
clankers-session = { version = "0.1.0", path = "../clankers-session" }
clankers-hooks = { version = "0.1.0", path = "../clankers-hooks" }
clanker-loop = { git = "https://github.com/brittonr/clanker-loop" }
clankers-message = { version = "0.1.0", path = "../clankers-message" }
clankers-provider = { version = "0.1.0", path = "../clankers-provider" }
clankers-tui-types = { version = "0.1.0", path = "../clankers-tui-types" }
clankers-config = { version = "0.1.0", path = "../clankers-config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

[dev-dependencies]
async-trait = "0.1"
tempfile = "3.8"
