[package]
name = "clankers-controller"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Transport-agnostic session controller for agent orchestration"

[dependencies]
clankers-protocol = { version = "0.1.0", path = "../clankers-protocol" }
clankers-agent = { version = "0.1.0", path = "../clankers-agent" }
clankers-core = { version = "0.1.0", path = "../clankers-core" }
clankers-engine = { version = "0.1.0", path = "../clankers-engine" }
clankers-session = { version = "0.1.0", path = "../clankers-session" }
clankers-hooks = { version = "0.1.0", path = "../clankers-hooks" }
clanker-loop = { workspace = true }
clanker-message = { workspace = true, features = ["transcript-compat"] }
clankers-db = { version = "0.1.0", path = "../clankers-db" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

[dev-dependencies]
clankers-provider = { version = "0.1.0", path = "../clankers-provider" }
syn = { version = "2", features = ["full", "visit"] }
tempfile = "3.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("tigerstyle"))'] }
