[package]
name = "clankers-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Embedded redb database for persistent storage (audit, memory, sessions, history, usage)"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
redb = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
