[package]
name = "clankers-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Embedded redb database for persistent storage (audit, memory, sessions, history, usage)"

[dependencies]
chrono = { workspace = true }
redb = "2.6"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("tigerstyle"))'] }
