[package]
name = "clankers-engine-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clanker-message = { workspace = true }
clankers-engine = { path = "../clankers-engine" }
clankers-tool-host = { path = "../clankers-tool-host" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
