[package]
name = "clankers-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Host-facing reusable agent engine contracts for clankers"

[dependencies]
clankers-core = { version = "0.1.0", path = "../clankers-core" }
clankers-message = { version = "0.1.0", path = "../clankers-message" }
clankers-provider = { version = "0.1.0", path = "../clankers-provider" }
clanker-router = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }

[lints]
workspace = true
